--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
             void main(void) {
                 vec4 color;
-                float specAmount = 0.05;
+                float specAmount = 20.0;
                 float specShine = 5.0;
-                float specBright = specAmount*pow(max(0.0, dot(vNormal, vHalfVec)),specShine);
                 float lightDot = dot(normalize(vNormal), vLightPos);
                 float surfBright = max(0.0, lightDot);
 
@@ -29,11 +28,20 @@
                     if(vTexCoord.s < 0.2 || vTexCoord.t < 0.2
                     || vTexCoord.s > 0.8 || vTexCoord.t > 0.8) {
                         color -= vec4(0.25, 0.25, 0.25, 0.25);
-                        surfBright = min(0.75, lightDot);
+                    } else {
+                        specShine = 2.0;
                     }
                 } else {
-                    color = vec4(0.1, 0.1, 0.1, 1.0);
+                    if(vTexCoord.s < 0.05 || vTexCoord.t < 0.05
+                    || vTexCoord.s > 0.95 || vTexCoord.t > 0.95) {
+                        color = vec4(0.0, 0.0, 0.0, 1.0);
+                        specShine = 4.0;
+                    } else {
+                        color = vec4(0.1, 0.1, 0.1, 1.0);
+                    }
                 }
+                float specBright = specAmount*pow(max(0.0, dot(vNormal, vHalfVec)),specShine);
+
                 color += vec4(vLightI, color.a);
                 color += vec4(color.rgb*surfBright+vSpecColor.rgb*specBright, color.a);
 
